<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 Antonio Leiva
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Komal Trading Corporation</string>
    <string name="action_settings">Settings</string>
    <string name="color_primary">#009788</string>

    <string name="home">HOME</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">SETTINGS</string>
    <string name="LinkToSignUp">No account yet? Register Now</string>
    <string name="LinkToSignIn">Already have an account? Login</string>
    <string name="cart">Cart</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sample_1">sample</string>
    <string name="track_order">TRACK ORDER</string>
    <string name="logOut">LOGOUT</string>
    <string name="action_clear_cart">Clear All</string>
    <string name="feedback">FEEDBACK</string>
    <string name="call_supports">CALL SUPPORT</string>
    <string name="hint_pincode">Pin Code*</string>
    <string name="hint_address">Address*</string>
    <string name="hint_city">City*</string>
    <string name="hint_state">State*</string>
    <string name="hint_contact">Contact No.*</string>
    <string name="hint_alternate_contact">Alternate Contact No.(Optional)</string>
    <string name="hint_associated_distributor">Associated Distributors</string>
    <string name="hint_email">Email</string>
    <string name="hint_first_name">First Name*</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_contact_no">Contact No.*</string>
    <string name="hint_display_name">Display Name</string>
    <string name="hint_pan_no">PAN No.</string>
    <string name="hint_vat_tin_no">VAT TIN No.</string>
    <string name="hint_gst_no">GST No.*</string>
    <string name="hint_user_type">User Type*</string>

    <string name="USER_TYPE_DEALER">Dealer</string>
    <string name="USER_TYPE_DISTRIBUTOR">Distributor</string>
    <string name="check_net_connection">Please check internet connection</string>
    <string name="verify_msg">OTP will be send to this contact No</string>
    <string name="login">Login</string>
    <string name="hint_password">Password*</string>
    <string name="show_password">Show</string>
    <string name="hide_password">Hide</string>
    <string name="forget_pass_msg">Enter new password and OTP sent in SMS</string>
    <string name="contact_us">CONTACT US</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="select_category">Select Category</string>
    <string name="hint_mark">Mark*</string>
    <string name="hint_destination">Destination*</string>
    <string name="hint_transprter_name">Transporter Name*</string>
</resources>
