<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:fitsSystemWindows="true">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:foregroundGravity="center">
        <!--android:background="@color/opaque_dark_2"-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/login"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <!-- <AutoCompleteTextView
                 android:id="@+id/editTextEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView11"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/edittext_bottom_border"
                 android:ems="10"
                 android:hint="@string/hint_email"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
                 android:paddingBottom="15dp"
                 android:paddingLeft="5dp"
                 android:paddingStart="5dp"
                 android:paddingTop="15dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="14sp" />
 -->

            <EditText
                android:id="@+id/editTextContactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView11"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittext_bottom_border"
                android:ems="10"
                android:hint="@string/hint_contact_no"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextContactNo"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittext_bottom_border"
                android:ems="10"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="30"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <!--  <TextView
                  android:id="@+id/textView_usertype_message"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/editTextPassword"
                  android:layout_marginTop="15dp"
                  android:padding="5dp"
                  android:text="User Type:"
                  android:textColor="@color/white" />

              <RadioGroup
                  android:id="@+id/radioGroupUserType"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_below="@+id/editTextPassword"
                  android:layout_marginTop="10dp"
                  android:layout_toEndOf="@+id/textView_usertype_message"
                  android:layout_toRightOf="@+id/textView_usertype_message"
                  android:orientation="vertical"
                  android:padding="5dp">

                  <RadioButton
                      android:id="@+id/radioButtonDealer"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:buttonTint="@color/white"
                      android:checked="true"
                      android:textColor="@color/white"
                      android:textSize="14sp"
                      android:text="@string/USER_TYPE_DEALER"/>

                  <RadioButton
                      android:id="@+id/radioButtonDistributor"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:buttonTint="@color/white"
                      android:textColor="@color/white"
                      android:textSize="14sp"
                      android:text="@string/USER_TYPE_DISTRIBUTOR"  />
              </RadioGroup>
  -->
            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editTextPassword"
                android:layout_marginTop="20dp"
                android:text="Forgot Password?"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvForgotPassword"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/primary"
                android:text="Login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_skip_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_primary_border"
                android:text="Skip Login"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/textViewLinkToSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_skip_login"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="@string/LinkToSignUp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/primary"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone" />


            <TextView
                android:id="@+id/textView_show_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvForgotPassword"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:text="@string/show_password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primary" />


        </RelativeLayout>


    </ScrollView>

</RelativeLayout>

