<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="60dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="Address"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:text="Payment"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="34dp"
                android:layout_toLeftOf="@+id/imageView_review_product"
                android:layout_toRightOf="@+id/imageView_shipping_address"
                android:background="@color/aluminum" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="34dp"
                android:layout_toLeftOf="@+id/imageView_payment"
                android:layout_toRightOf="@+id/imageView_review_product"
                android:background="@color/aluminum" />

            <ImageView
                android:id="@+id/imageView_shipping_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:src="@drawable/ic_numeric_1"
                android:tint="@color/primary" />

            <ImageView
                android:id="@+id/imageView_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView5"
                android:src="@drawable/ic_numeric_3"
                android:tint="@color/aluminum" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="Review Product"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView_review_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_numeric_2"
                android:tint="@color/aluminum" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView_review_product"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:text="Add Shipping Address"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <android.support.v7.widget.CardView xmlns:cardview="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:padding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_pincode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_pincode"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="6"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_layout_pincode">


                        <EditText
                            android:id="@+id/input_address"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/whole_border"

                            android:ems="10"
                            android:hint="@string/hint_address"

                            android:inputType="textMultiLine|textCapWords"

                            android:maxHeight="100dp"
                            android:maxLength="100"

                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:textSize="14sp" />


                        <!--
                                                <EditText
                                                    android:id="@+id/input_address"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:layout_marginBottom="4dp"
                                                    android:layout_marginTop="4dp"
                                                    android:background="@drawable/whole_border"
                                                    android:ems="10"
                                                    android:hint="@string/hint_address"
                                                    android:inputType="textCapWords"
                                                    android:singleLine="false"
                                                    android:maxLines="3"
                                                    android:minLines="1"
                                                    android:padding="5dp"
                                                    android:scrollbars="vertical"
                                                    android:textColor="@color/black"
                                                    android:textSize="14sp" />-->
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_layout_address">

                        <EditText
                            android:id="@+id/input_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_city"
                            android:imeOptions="actionNext"
                            android:inputType="text|textCapWords"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_layout_city">

                        <EditText
                            android:id="@+id/input_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_state"
                            android:imeOptions="actionNext"
                            android:inputType="text|textCapWords"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_layout_state">

                        <EditText
                            android:id="@+id/input_contact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_contact"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="10"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_alternate_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_layout_contact"
                        android:visibility="gone">

                        <EditText
                            android:id="@+id/input_alternate_contact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_alternate_contact"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="10"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_proceed_to_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"
        android:text="Proceed To Review"
        android:textColor="@color/white" />

</RelativeLayout>